# dbrew

./: .travis.yml  Makefile  README.md  benchmark.py  meson.build
llvm/: Makefile  meson.build
llvm/benchmark/: Makefile  benchmark.c  exp.c  kernels.c  meson.build  stencil-kernels.h  stencil.c  timer.c
llvm/examples/: Makefile  lifter.c  meson.build  spmv.c
llvm/include/: dbrew-backend.h  dbrew-decoder.h  dbrew-llvm.h  llbasicblock-internal.h  llengine.h  llfunction-internal.h  llfunction.h  llinstr-internal.h  llinstruction-internal.h  llsupport-internal.h
llvm/src/: dbrew-backend.c  dbrew-decoder.c  llbasicblock.c  lldecoder.c  llengine-internal.h  llengine.c  llfunction-internal.h  llfunction.c  llinstruction-callret.c  llinstruction-gp.c  llinstruction-sse.c  llinstruction-stack.c  llinstruction.c  lloperand.c  llsupport.cc  meson.build  support-internal.h  support.cc
llvm/test/: cases-condition.inc  cases-instr-gp.inc  cases-instr-sse.inc  cases-operands-gp.inc  correctness.c  meson.build
origin/: Makefile  meson.build
origin-llvm/: meson.build
origin-llvm/benchmark/: exp.c  meson.build  stencil-kernels.c  stencil.c
origin-llvm/examples/: .gitignore  meson.build  spmv.c
origin-llvm/src/: dbrew-backend.c  meson.build
origin/examples/: Makefile
origin/src/: emulate.c  engine.c  meson.build  printer.c
src/: decode.c  emulate.c  generate.c  meson.build
