
dbreworiginllvm_lib = static_library('dbreworiginllvm', 'dbrew-backend.c',
                                     include_directories: include_directories('../include'),
                                     dependencies: [libllvm, librellume, dbrew_priv, dbrewllvm_priv],
                                     install: true)
